src/main/java/com/example/team_work_management/exception/error/AccessDeniedException.java
package com.example.team_work_management.exception.error;

public class AccessDeniedException extends RuntimeException{
    public AccessDeniedException(String message){
        super(message);
    }
}
